--- a/kubernetes/apps/security/authelia/app/helmrelease.yaml
+++ b/kubernetes/apps/security/authelia/app/helmrelease.yaml
@@ -25,7 +25,7 @@ spec:
     keepHistory: false
   dependsOn:
     - name: lldap
-      namespace: default
+      namespace: security
     - name: redis
       namespace: database
   values:
