--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -24,7 +24,7 @@ stringData:
     ALERTMANAGER_PUSHOVER_TOKEN: ENC[AES256_GCM,data:QFytjqDSOXWL3/ZbTeeosNKr3nSIsl3l/nOJa+/B,iv:IPBs5Glre1CzfE+tTkT252qKeD+Htfaq9Uc8gU5ji1s=,tag:tRNQLawj6j5LNaep9TteaA==,type:str]
     LLDAP_JWT_SECRET: ENC[AES256_GCM,data:2iMzPjCcQ+iwwBHGotho1ENlZRoyEUbJqPN5tIMw1kE=,iv:eiRdn5YVHqzjD/+qjfI4DNHikQTS+OKlI/lMUURavD4=,tag:rwkPgLlWoqmEAuuRtcGd4g==,type:str]
     LLDAP_LDAP_USER_PASS: ENC[AES256_GCM,data:0V5kCe+KchkU+oGsdv75Tc8RM2I=,iv:PD02wem8Y4qmkMtkmwZASxXnVSygPM0TRwdTG2zPONE=,tag:I4wy6WNoRdgi3uf0/AsMqg==,type:str]
-    LLDAP_USER_DN: ENC[AES256_GCM,data:7vBYpL3oyBYW,iv:AsL7md7/YQ8jaC+f+aM3yMUGJ05pSpP2Kk5IwmbWPlk=,tag:tcHnYaCIFJU1i/GU34aduQ==,type:str]
+    LLDAP_USER_DN: ENC[AES256_GCM,data:/22HjtE=,iv:QZgNS7hqHK8cqUuXcZ9KJRQpe5hqvrymYd6g5GFqDUU=,tag:sWuvH66A/7KLGs39vpKtTQ==,type:str]
     LLDAP_LDAP_USER_EMAIL: ENC[AES256_GCM,data:CarfS0o6oKOelCExapbPdAw=,iv:T9h27I/zsztSnndy/+q7iJleZJOQB1HdEmboB1iEMlY=,tag:7Ld/x0rvbybuOaLdTUlC2A==,type:str]
     LLDAP_SERVER_KEY_SEED: ENC[AES256_GCM,data:3Yx5YIgAJPVbMwajKX8HtiBp6kqNqAGa/awDUd/XZjLgbeS0J7s7rbHMNRLGcI/OkcMStj2P+Q==,iv:NDSgB7Sn2gXUU2zxZSCp5VIBcygrIOU+IvqzQUMdDss=,tag:AVAoAFGxx+EtNH5pvE3Icw==,type:str]
     LLDAP_POSTGRES_USER: ENC[AES256_GCM,data:Hyu4wORqGw==,iv:4cu4NWXCzl4UyKPKdR3Pt6U4bsePlkxzBiVMjqrQ160=,tag:0/MYJ5UQTSB+H6rAuMspmg==,type:str]
@@ -54,8 +54,8 @@ sops:
             QmxYU2FYZ0N2Z29lMTdhZnQyNU9jSUEKyG1YlQGZAqOI2namyYVUzFoW+7O9s5CL
             x/cy3nNdaILNiZtBPL9Zq6qvJSvQ0l+DCiGwEjBosA35m27eVooacw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-02-10T09:38:07Z"
-    mac: ENC[AES256_GCM,data:29SInCy/omjF8JorWRVZINrU2PInrF+EihYmhRNCXGVfY7+jA3/tyBLK2CKiUtb2sbUff9YIhIxKGkq2ppPCkTI2T6x8kwheehuDksTy1QZnwUynXvsxD+/fq3VpG+B6xuCaiu6GBOo+exRxFFIe/i07fI4G36iw++CrHLi9YfE=,iv:BhMfZ+a9rk5cY73xOGrKCYgcGIZrAj7P0l97j7jgkpk=,tag:jl9tE4DTA0Dr84HQQfwAfA==,type:str]
+    lastmodified: "2024-02-10T10:19:59Z"
+    mac: ENC[AES256_GCM,data:z1ns6BTOJXNJK4zG+T8xPMgXJ/aTp203INf38GORYJCCtb58mV0dJn4cfx/x/XU+vQ/mwd/AcdKxBSx8ItnxqecPNs5xjnMgizcESnkvQmYgh3yImr71JbkDAINGpg1w3xAghaY345RUskloJ7FTF66AWmxIWh11vgavhtWC46U=,iv:K6ob7gja33X//IAozEmzjASbAvgQ83GxZzP5TqtSGqg=,tag:HfxC1nlCrpVZrDSM8uao6Q==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
