--- a/kubernetes/apps/service/smtp-relay/app/resources/maddy.conf
+++ b/kubernetes/apps/service/smtp-relay/app/resources/maddy.conf
@@ -18,7 +18,7 @@ target.queue remote_queue {
 
 target.smtp remote_smtp {
     attempt_starttls yes
-    require_tls yes
+    require_tls no
     auth plain {env:SMTP_RELAY_USERNAME} {env:SMTP_RELAY_PASSWORD}
     targets tls://{env:SMTP_RELAY_SERVER}:{env:SMTP_RELAY_SERVER_PORT}
 }
