--- a/kubernetes/apps/service/smtp-relay/app/helmrelease.yaml
+++ b/kubernetes/apps/service/smtp-relay/app/helmrelease.yaml
@@ -56,13 +56,13 @@ spec:
             runAsUser: 568
             runAsGroup: 568
             runAsNonRoot: true
-          topologySpreadConstraints:
-            - maxSkew: 1
-              topologyKey: kubernetes.io/hostname
-              whenUnsatisfiable: DoNotSchedule
-              labelSelector:
-                matchLabels:
-                  app.kubernetes.io/name: *app
+          # topologySpreadConstraints:
+          #   - maxSkew: 1
+          #     topologyKey: kubernetes.io/hostname
+          #     whenUnsatisfiable: DoNotSchedule
+          #     labelSelector:
+          #       matchLabels:
+          #         app.kubernetes.io/name: *app
     service:
       main:
         type: LoadBalancer
