--- a/kubernetes/apps/observability/grafana/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/grafana/app/helmrelease.yaml
@@ -50,8 +50,8 @@ spec:
         check_for_plugin_updates: false
         reporting_enabled: false
       auth:
-        oauth_auto_login: true
         disable_login_form: true
+        oauth_allow_insecure_email_lookup: true
       auth.generic_oauth:
         enabled: true
         name: Authelia
@@ -62,7 +62,7 @@ spec:
         groups_attribute_path: groups
         name_attribute_path: name
         use_pkce: true
-        oauth_allow_insecure_email_lookup: true
+        auto_login: true
       auth.generic_oauth.group_mapping:
         org_id: 1
         role_attribute_path: |
