--- a/kubernetes/apps/observability/grafana/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/grafana/app/helmrelease.yaml
@@ -66,7 +66,7 @@ spec:
       auth.generic_oauth.group_mapping:
         org_id: 1
         role_attribute_path: |
-          contains(groups[*], 'admins') && 'Admin' || contains(groups[*], 'people') && 'Viewer'
+          contains(info.groups[*], 'admins') && 'Admin' || contains(info.groups[*], 'editors') && 'Editor' || 'Viewer'
       auth.basic:
         enabled: false
       auth.anonymous:
