--- a/kubernetes/apps/database/cloudnative-pg/cluster/cluster16.yaml
+++ b/kubernetes/apps/database/cloudnative-pg/cluster/cluster16.yaml
@@ -27,9 +27,9 @@ spec:
   monitoring:
     enablePodMonitor: true
     # Ref: https://github.com/cloudnative-pg/cloudnative-pg/issues/2501
-    podMonitorMetricRelabelings:
-      - { sourceLabels: ["cluster"], targetLabel: cnpg_cluster, action: replace }
-      - { regex: cluster, action: labeldrop }
+    # podMonitorMetricRelabelings:
+    #   - { sourceLabels: ["cluster"], targetLabel: cnpg_cluster, action: replace }
+    #   - { regex: cluster, action: labeldrop }
   backup:
     retentionPolicy: 10d
     barmanObjectStore: &barmanObjectStore
