--- a/kubernetes/apps/kube-system/kustomization.yaml
+++ b/kubernetes/apps/kube-system/kustomization.yaml
@@ -6,3 +6,6 @@ resources:
   - ./cilium/ks.yaml
   - ./metrics-server/ks.yaml
   - ./reloader/ks.yaml
+  - ./amd-device-plugin/ks.yaml
+  - ./node-feature-discovery/ks.yaml
+  - ./intel-device-plugin/ks.yaml
