--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -39,6 +39,8 @@ stringData:
     SMTP_RELAY_SERVER: ENC[AES256_GCM,data:TtFgZOUv89NWxhNnouRWo5JmD/9i,iv:LW89G46d05hkgnmkAlAoSM2P8wxfkiF5qLFy3lWJSaE=,tag:Ut3NbMPEuTRVUqIm6xUZFQ==,type:str]
     SMTP_RELAY_USERNAME: ENC[AES256_GCM,data:kTXqeTxutGiRgvLytQpX33VBNZA=,iv:N4d7fuDX82o7RsxNQib6Yq3xTTAGfTsf1WKMwJ879Nw=,tag:P6/kXazoYmC2SjJD0qredA==,type:str]
     SMTP_RELAY_PASSWORD: ENC[AES256_GCM,data:xGzekLo8+RP/YKCH/HbUO4Nhl7qyCMFUICohMqXZN1Z6F28j,iv:krjA6mLotbh0a7dYGXyg/d62NNBvoLPUSnqYnK5wHIU=,tag:iMyNBq/iyhFhco+ppbuuOA==,type:str]
+    MOSQUITTO_MQTT_USERNAME: ENC[AES256_GCM,data:ZjLYGtn8nZ4=,iv:rakFZM0SDdVSGeCKwrMk+XTJn0Tm2fy58Ce/MuJwmzY=,tag:CCYk4S9A0xFviDHbrgLnQw==,type:str]
+    MOSQUITTO_MQTT_PASSWORD: ENC[AES256_GCM,data:90pu/ZiV9CfcMA==,iv:Xutd2jzZBHWuRE9U8Fh1vOhaQv3ZE/4VgYg4R8NTFUA=,tag:mMqbF0/DoKNMsbKlQ/wdKQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -54,8 +56,8 @@ sops:
             QmxYU2FYZ0N2Z29lMTdhZnQyNU9jSUEKyG1YlQGZAqOI2namyYVUzFoW+7O9s5CL
             x/cy3nNdaILNiZtBPL9Zq6qvJSvQ0l+DCiGwEjBosA35m27eVooacw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-02-10T10:19:59Z"
-    mac: ENC[AES256_GCM,data:z1ns6BTOJXNJK4zG+T8xPMgXJ/aTp203INf38GORYJCCtb58mV0dJn4cfx/x/XU+vQ/mwd/AcdKxBSx8ItnxqecPNs5xjnMgizcESnkvQmYgh3yImr71JbkDAINGpg1w3xAghaY345RUskloJ7FTF66AWmxIWh11vgavhtWC46U=,iv:K6ob7gja33X//IAozEmzjASbAvgQ83GxZzP5TqtSGqg=,tag:HfxC1nlCrpVZrDSM8uao6Q==,type:str]
+    lastmodified: "2024-02-11T15:47:13Z"
+    mac: ENC[AES256_GCM,data:qCnjKBbbwof7bekoJMZKWrQdUA9PcJzPWvUC9uJqmGqHmQUAGTibw2WnvD85Cg5H5iEGwumQRcwopVZFel59TTfIFTwGCZmpuFJpDQ0Srs7XEaryyMnzhYvIuGHuJfnJN3p9QnMbfZWAWNQUjdYbvj63YsoDCDh4p0jIgg0no94=,iv:8Pmhxf6PxRCUDRY9F3AUcHmxyTlDtwrd5QcpimIyX1k=,tag:BzHz7ZuruoC9JXFaSpcguQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
