--- a/kubernetes/apps/home/mosquitto/app/kustomization.yaml
+++ b/kubernetes/apps/home/mosquitto/app/kustomization.yaml
@@ -3,12 +3,12 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - ./pvc.yaml
   - ./secret.sops.yaml
   - ./helmrelease.yaml
-  - ../../../../templates/gatus/guarded
 configMapGenerator:
-  - name: frigate-configmap
+  - name: mosquitto-configmap
     files:
-      - config.yml=./resources/config.yml
+      - mosquitto.conf=./resources/mosquitto.conf
 generatorOptions:
   disableNameSuffixHash: true
