--- a/kubernetes/apps/home/frigate/app/secret.sops.yaml
+++ b/kubernetes/apps/home/frigate/app/secret.sops.yaml
@@ -3,5 +3,25 @@ kind: Secret
 metadata:
     name: frigate-secret
 stringData:
-    FRIGATE_MQTT_USERNAME: ${MOSQUITTO_MQTT_USERNAME}
-    FRIGATE_MQTT_PASSWORD: ${MOSQUITTO_MQTT_PASSWORD}
+    FRIGATE_MQTT_USERNAME: ENC[AES256_GCM,data:xu4JxBhc6AWRDn4+y6zRYsYh9Bg4S3Qi9WM=,iv:sCYZYqzPNkX2p54oC8iovaz9sjnuQyIS6AvxO1wInYA=,tag:Eu122OhoczEIigxCYlHPXw==,type:str]
+    FRIGATE_MQTT_PASSWORD: ENC[AES256_GCM,data:mNMLHOPVjnIBXDf82bfKg2i7jDbUvO/Holg=,iv:EVQHiK1JAq6bD3BbklIFnx9Si9zgip9nhao1g6gibGM=,tag:3yoyWFwy8wHD87Q6cuzexA==,type:str]
+sops:
+    kms: []
+    gcp_kms: []
+    azure_kv: []
+    hc_vault: []
+    age:
+        - recipient: age1rzxy9s9prfhu2ceqrt9hexs3tl402d7j2haumxl0lpn2pfycle6sz5kefj
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBZaGFkZm92ekhKSDMzVlIr
+            aG5GQ3ZMbk5CL2VBRmNFclRDY3diMjIrVVFVCjZ4ZEVodWd4Qkl1RHllcHRFVzB2
+            QWlCNklTdGVCbWpNSWg1WE1PZWg5ejQKLS0tIHFXYmNDSUpYZTB0clBBZFlaTXp2
+            Ync1YTdKK2ordEpYRmpkekt0Ny9kcTAK7qIGOC4KI/CSiY0sOGOcuhAhHOKQVEBm
+            LE6p9Lrc8MJR3NBVUOGcWA0xvZrYqjhB1sj6n8kUEInQp5yDWM+DTg==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2024-02-11T19:53:42Z"
+    mac: ENC[AES256_GCM,data:Jt/yxzV29IQqhjq/rNKZuMv2qSO3sz0/zh6Op4Aj9TZghZP37oiVfmwJF+J97OF7WImbQ+8ZtxNkj1kElKeR5pyu/S8GXPtPHTp/xsr+P/wleJvgkLSRaoaegWvgoMtoxUs9CBkWKxQjlDr/LWzneLQdhTgV/wHdpZs8FpyhUH4=,iv:G7knJcPj+siAJOr/YZ7ez5G9ig4nk3Xj75Z11c0NoG0=,tag:pJOp23//MfqSnq2ol8XtVQ==,type:str]
+    pgp: []
+    encrypted_regex: ^(data|stringData)$
+    version: 3.8.1
