--- a/kubernetes/apps/home/mosquitto/app/secret.sops.yaml
+++ b/kubernetes/apps/home/mosquitto/app/secret.sops.yaml
@@ -3,7 +3,26 @@ kind: Secret
 metadata:
     name: mosquitto-secret
 stringData:
-    username: ${MOSQUITTO_MQTT_USERNAME}
-    password: ${MOSQUITTO_MQTT_PASSWORD}
-    mosquitto_pwd: |-
-      ${MOSQUITTO_MQTT_USERNAME}:${MOSQUITTO_MQTT_PASSWORD}
+    username: ENC[AES256_GCM,data:OGHk9lJIcqy2YfpC/PXVcskgujEDHXfY8xo=,iv:AgL/lLS5MFttS7N7MXsh1EzlJnMOx1MEKC58nWDG6F4=,tag:DFBB89Uaz5h5T/6Zt1cIpg==,type:str]
+    password: ENC[AES256_GCM,data:ifDM2CiL3djeiJixDVd+7E2Iw6NPi5Bvbkk=,iv:2SmEYTOlEzAATSp502s9hRk9G8iU3Fmihaie+f9zINo=,tag:Fvs1OtMGUUN4CF5HdAKdFg==,type:str]
+    mosquitto_pwd: ENC[AES256_GCM,data:1Z62U6e3LBxFXkzIaGQzUe9fZSbYy+qsg4T5xxE0YK0guVxl1jrmgMFdTf7UdWgZNCy4oxM=,iv:SWeq8FlMc7gIDKt21DCCC5UWCN45ldMvTKsZqwF08EI=,tag:pnOBZDil8S1EN21KPdq3zA==,type:str]
+sops:
+    kms: []
+    gcp_kms: []
+    azure_kv: []
+    hc_vault: []
+    age:
+        - recipient: age1rzxy9s9prfhu2ceqrt9hexs3tl402d7j2haumxl0lpn2pfycle6sz5kefj
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBqVWk3L2lVQmZNWlBmUnI3
+            NmJyTzZDK1JFdkJBUXpHeVI1bFdYckVHeDFJCjBveTJadzd3K3BwYVhXVTZLNUpF
+            blZDdmVSZElweC8wbGkxbjNUajVudEkKLS0tIGFJNmxOdkxBenRyVEgxUzltczhn
+            akMzNzVPbEgyMkxndEhMNWR0eTZyMzQKSlR4aO15kfiGIs8uuiU95bla4Oi/uUT2
+            M2/qx5H5iKD+Wda3rE2fHgtsbJI2ncHhUtOvWS7yizN3TgzYgX+3SQ==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2024-02-11T19:53:42Z"
+    mac: ENC[AES256_GCM,data:8SXUDsCmJhiXJWTBO+t9a6R5jnXGxdBQLaLUtfOOs4jgVVpzqN6cTeUJAWV+zUS1a/EXadOMqyv9LibOy7e5FxFm7dhJMDHistjzH5uLx6SWudrS3fAHW3N0YBYYjQljEkvTVVjg0cocYS7IrsGZ2SjZfs8Zus6ZWHtSxd8HKYw=,iv:pwxF3FNTsHqXmNB0FVzHdD98Qn4HncgzJL6VxI3UREE=,tag:xe4Y0026kSBVMJZtwAFIZg==,type:str]
+    pgp: []
+    encrypted_regex: ^(data|stringData)$
+    version: 3.8.1
