--- a/kubernetes/apps/service/smtp-relay/app/secret.sops.yaml
+++ b/kubernetes/apps/service/smtp-relay/app/secret.sops.yaml
@@ -4,7 +4,27 @@ metadata:
     name: smtp-relay-secret
     namespace: service
 stringData:
-  SMTP_RELAY_HOSTNAME: ${SMTP_RELAY_HOSTNAME}
-  SMTP_RELAY_SERVER: ${SMTP_RELAY_SERVER}
-  SMTP_RELAY_USERNAME: ${SMTP_RELAY_USERNAME}
-  SMTP_RELAY_PASSWORD: ${SMTP_RELAY_PASSWORD}
+    SMTP_RELAY_HOSTNAME: ENC[AES256_GCM,data:OIWcxzz8CHeAn9Ea4TeKZIrUXl+Yug==,iv:GOcd5W6wU6/8yYAe/pD0Wq9rw05iioxPuH4LdtG/13E=,tag:LIrUF7JFJ3Ho+GPFHnrw/w==,type:str]
+    SMTP_RELAY_SERVER: ENC[AES256_GCM,data:RGNN5Vh8S9BXdvk6gffFBxnIC8M=,iv:bVOxXB4uU4ku8YTs+cgQj18puwQEP8mMiaYuJQ5bNYk=,tag:FSkoG8fbWEm/vaiHuCaL1Q==,type:str]
+    SMTP_RELAY_USERNAME: ENC[AES256_GCM,data:IQXAlbMnQUtDqfzBk9CyAy5nPtRrGQ==,iv:08wXistmybHYFGueqX7LBL0d8UlewCKpjDBAMBU8l6E=,tag:+HJzEctzXH6y7BG95NMbiA==,type:str]
+    SMTP_RELAY_PASSWORD: ENC[AES256_GCM,data:drqdXlMoHadsKKmrGr2NsXGgA1Iq2Q==,iv:i43wpPJDYtXZZRKTHYkSZC5GN5Z3Z161ut0JPtgQeb4=,tag:EFFUVASv0BmHD92TugYWXg==,type:str]
+sops:
+    kms: []
+    gcp_kms: []
+    azure_kv: []
+    hc_vault: []
+    age:
+        - recipient: age1rzxy9s9prfhu2ceqrt9hexs3tl402d7j2haumxl0lpn2pfycle6sz5kefj
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBMOC9NUStCNm4zMlV6SXUw
+            aEN2bmc0Qnppc2s0VWpIL2dEc0dNVittdDBFCnhLUHljUEsyZ2JDQ0tkMjZEWk5J
+            dzNlT3hKbm5YVWZKVzh0S2YxS2VUTTAKLS0tIE9lVHdoZUF3clU3ZExOOHgyeEla
+            YXNqR3p3K1hHeHY3OE8yeEQzM2xmWmcK907oMeHagfEKYMTLmPgDfKd7ImytgmUp
+            qfJlwzuPb7WdVaOF26WXoJFNF3hEE5UTJY7ROZI9vHqPgbfPQWl8SA==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2024-02-11T19:53:42Z"
+    mac: ENC[AES256_GCM,data:Xj+oZqzJtFxT/Mke6qmghna01lqZdgU68TeTJwd2UmSRal9J/TpI8tIh/XbYgzNS8CoAcl/UxtxUTjoH5cqCnprhZ01ysc2cjDsx7RGLqBUbEgzt1gTulW+H2IlsaFyz2cNj2q1SfuZo75QQbdSTdaqobEUhp9NxTXP47kAaSEo=,iv:Lm51EtZaQ8Kp0xH1WJoKu5kRML5i2LXLPDh3wUsU8W4=,tag:AfTwv9rJZvRTjT7sIj1vNg==,type:str]
+    pgp: []
+    encrypted_regex: ^(data|stringData)$
+    version: 3.8.1
