--- a/kubernetes/apps/home/kustomization.yaml
+++ b/kubernetes/apps/home/kustomization.yaml
@@ -6,5 +6,5 @@ resources:
   # Pre Flux-Kustomizations
   - ./namespace.yaml
   # Flux-Kustomizations
-  - ./home/frigate/ks.yaml
-  - ./home/mosquitto/ks.yaml
+  - ./frigate/ks.yaml
+  - ./mosquitto/ks.yaml
