--- a/kubernetes/apps/kube-system/amd-device-plugin/ks.yaml
+++ b/kubernetes/apps/kube-system/amd-device-plugin/ks.yaml
@@ -3,7 +3,7 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: amd-device-plugin
+  name: &app amd-device-plugin
   namespace: flux-system
 spec:
   targetNamespace: kube-system
