--- a/kubernetes/flux/repositories/helm/repos/node-feature-discovery.yaml
+++ b/kubernetes/flux/repositories/helm/repos/node-feature-discovery.yaml
@@ -3,8 +3,8 @@
 apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: HelmRepository
 metadata:
-  name: amdm
+  name: node-feature-discovery
   namespace: flux-system
 spec:
   interval: 2h
-  url: https://rocm.github.io/k8s-device-plugin/
+  url: https://kubernetes-sigs.github.io/node-feature-discovery/charts
