--- a/kubernetes/apps/home/frigate/app/helmrelease.yaml
+++ b/kubernetes/apps/home/frigate/app/helmrelease.yaml
@@ -67,18 +67,18 @@ spec:
               requests:
                 cpu: 100m
               limits:
-                gpu.intel.com/i915: "1"
+                # gpu.intel.com/i915: "1"
                 memory: 8Gi
-        pod:
-          affinity:
-            podAntiAffinity:
-              requiredDuringSchedulingIgnoredDuringExecution:
-                - labelSelector:
-                    matchExpressions:
-                      - key: app.kubernetes.io/name
-                        operator: In
-                        values: ["plex"]
-                  topologyKey: kubernetes.io/hostname
+        # pod:
+        #   affinity:
+        #     podAntiAffinity:
+        #       requiredDuringSchedulingIgnoredDuringExecution:
+        #         - labelSelector:
+        #             matchExpressions:
+        #               - key: app.kubernetes.io/name
+        #                 operator: In
+        #                 values: ["plex"]
+        #           topologyKey: kubernetes.io/hostname
           # nodeSelector:
           #   google.feature.node.kubernetes.io/coral: "true"
           #   intel.feature.node.kubernetes.io/gpu: "true"
