--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -20,8 +20,10 @@ stringData:
     MINIO_ROOT_PASSWORD: ENC[AES256_GCM,data:7Q/BxHHBRliqSg==,iv:AlMR/cmRHlxsAWwPTbfDj0rB6TO8lXlhCAKMvhHf3CM=,tag:xRXY2L1eIluZV/Q2BypgmA==,type:str]
     PUSHOVER_USER_KEY: ENC[AES256_GCM,data:/GKNQ296d8YqjU7VVAY1RrRVcq5ZBsT+JkIt/mX3,iv:jpl/0670Ib+9XJx0fjOIqZFL91CKXeg8/JTajEZNht0=,tag:h5sms0Jw2WBA2BRhd4z50Q==,type:str]
     GATUS_PUSHOVER_TOKEN: ENC[AES256_GCM,data:fS6KBB3j5IZcbj+nnZneXXGMWfRRbtagzjWO6IYV,iv:T1XLyYdU32tM8G+OUGgJB3kL2REWcjvAMjgvk/2suq4=,tag:2GVVKpo4u1j9sSO2GRCy1Q==,type:str]
-    GRAFANA_OAUTH_CLIENT_SECRET: ENC[AES256_GCM,data:USKIMaJ+Uy9oMVWkuOeKcdTKEHBTbgjl7rFthpWO8ndBp989bb61p9xvu+4azw9TpdjXC//tyzdbUTwX3FA0Vg==,iv:6PmB6GTKIzoIvGct5KBGR6ae56T0ExJAXU9ss0hKxYo=,tag:cPGjqaLz+59q5Y5IBKdIjg==,type:str]
+    SONARR_PUSHOVER_TOKEN: ENC[AES256_GCM,data:3nHu4JSgF3CgHXCoWjp2RVtUk7T1GdJCrMphfqBp,iv:a3zEUwZwHx3utVEEp/MPEy4EBE+UEchijmSu/Yw3Inc=,tag:/Y5R92NtNWbtsHC3gKmvpw==,type:str]
     ALERTMANAGER_PUSHOVER_TOKEN: ENC[AES256_GCM,data:QFytjqDSOXWL3/ZbTeeosNKr3nSIsl3l/nOJa+/B,iv:IPBs5Glre1CzfE+tTkT252qKeD+Htfaq9Uc8gU5ji1s=,tag:tRNQLawj6j5LNaep9TteaA==,type:str]
+    RADARR_PUSHOVER_TOKEN: ENC[AES256_GCM,data:FSi7d9wA79qU/5yJciwg4OBK4/Ao9Lu8UwFbUBV3,iv:1H/Q7wldS8ZuA8VbDnC0y6Yb4LnAKXfQVU3AKUogM/4=,tag:kSvlvorY3U0h3VaGfI9cpg==,type:str]
+    GRAFANA_OAUTH_CLIENT_SECRET: ENC[AES256_GCM,data:USKIMaJ+Uy9oMVWkuOeKcdTKEHBTbgjl7rFthpWO8ndBp989bb61p9xvu+4azw9TpdjXC//tyzdbUTwX3FA0Vg==,iv:6PmB6GTKIzoIvGct5KBGR6ae56T0ExJAXU9ss0hKxYo=,tag:cPGjqaLz+59q5Y5IBKdIjg==,type:str]
     LLDAP_JWT_SECRET: ENC[AES256_GCM,data:2iMzPjCcQ+iwwBHGotho1ENlZRoyEUbJqPN5tIMw1kE=,iv:eiRdn5YVHqzjD/+qjfI4DNHikQTS+OKlI/lMUURavD4=,tag:rwkPgLlWoqmEAuuRtcGd4g==,type:str]
     LLDAP_LDAP_USER_PASS: ENC[AES256_GCM,data:0V5kCe+KchkU+oGsdv75Tc8RM2I=,iv:PD02wem8Y4qmkMtkmwZASxXnVSygPM0TRwdTG2zPONE=,tag:I4wy6WNoRdgi3uf0/AsMqg==,type:str]
     LLDAP_USER_DN: ENC[AES256_GCM,data:/22HjtE=,iv:QZgNS7hqHK8cqUuXcZ9KJRQpe5hqvrymYd6g5GFqDUU=,tag:sWuvH66A/7KLGs39vpKtTQ==,type:str]
@@ -56,8 +58,8 @@ sops:
             QmxYU2FYZ0N2Z29lMTdhZnQyNU9jSUEKyG1YlQGZAqOI2namyYVUzFoW+7O9s5CL
             x/cy3nNdaILNiZtBPL9Zq6qvJSvQ0l+DCiGwEjBosA35m27eVooacw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-02-11T15:47:13Z"
-    mac: ENC[AES256_GCM,data:qCnjKBbbwof7bekoJMZKWrQdUA9PcJzPWvUC9uJqmGqHmQUAGTibw2WnvD85Cg5H5iEGwumQRcwopVZFel59TTfIFTwGCZmpuFJpDQ0Srs7XEaryyMnzhYvIuGHuJfnJN3p9QnMbfZWAWNQUjdYbvj63YsoDCDh4p0jIgg0no94=,iv:8Pmhxf6PxRCUDRY9F3AUcHmxyTlDtwrd5QcpimIyX1k=,tag:BzHz7ZuruoC9JXFaSpcguQ==,type:str]
+    lastmodified: "2024-02-15T17:48:19Z"
+    mac: ENC[AES256_GCM,data:zemA3lQfVya8M+G2TfUBVyH/mtrDSLlry+TAzCBNjHVCw45TnJBWJH8ujb4ZXYH/vvBRgENXmGSCOFYnq5FJKJhUkRsNFJgLXNVnyfPZ3VX1xadYerhN/Sl6zn6roChdcxilfTMPbHkR5dfF/ucdMi5aZ07O7V+2zu++2Wzi0Uo=,iv:HbtqAApXt8FjrS1Fc/Lu8oXbFIX35uv8AMOvqkgjaUc=,tag:YyVYn5fSfbvvl8k7T0AR5w==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
