--- a/kubernetes/apps/media/plex/app/helmrelease.yaml
+++ b/kubernetes/apps/media/plex/app/helmrelease.yaml
@@ -61,10 +61,10 @@ spec:
               requests:
                 cpu: 100m
               limits:
-                # gpu.intel.com/i915: 1
                 memory: 16Gi
-        # pod:
-        #   affinity:
+                # gpu.intel.com/i915: 1
+        pod:
+          affinity:
         #     podAntiAffinity:
         #       requiredDuringSchedulingIgnoredDuringExecution:
         #         - labelSelector:
