--- a/kubernetes/apps/media/radarr/app/helmrelease.yaml
+++ b/kubernetes/apps/media/radarr/app/helmrelease.yaml
@@ -124,3 +124,7 @@ spec:
         existingClaim: media-storage
         globalMounts:
           - path: /media
+      buffer:
+        existingClaim: buffer
+        globalMounts:
+          - path: /buffer
