--- a/kubernetes/apps/media/plex/app/helmrelease.yaml
+++ b/kubernetes/apps/media/plex/app/helmrelease.yaml
@@ -26,6 +26,8 @@ spec:
   dependsOn:
     - name: longhorn
       namespace: storage
+    - name: media-storage
+      namespace: media
   values:
     controllers:
       main:
