--- a/kubernetes/apps/media/qbittorrent/ks.yaml
+++ b/kubernetes/apps/media/qbittorrent/ks.yaml
@@ -7,6 +7,8 @@ metadata:
   namespace: flux-system
 spec:
   targetNamespace: media
+  dependsOn:
+    - name: media-storage
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
