--- a/kubernetes/apps/media/sonarr/ks.yaml
+++ b/kubernetes/apps/media/sonarr/ks.yaml
@@ -12,6 +12,9 @@ spec:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: cloudnative-pg-cluster
+    - name: longhorn
+    - name: media-storage
+    - name: qbittorrent
   path: ./kubernetes/apps/media/sonarr/app
   prune: true
   sourceRef:
