--- a/kubernetes/apps/media/plex/app/helmrelease.yaml
+++ b/kubernetes/apps/media/plex/app/helmrelease.yaml
@@ -79,7 +79,7 @@ spec:
             runAsUser: 568
             runAsGroup: 568
             runAsNonRoot: true
-            fsGroup: 568
+            fsGroup: 1000
             fsGroupChangePolicy: OnRootMismatch
             supplementalGroups: [44, 10000]
     service:
@@ -112,10 +112,10 @@ spec:
         enabled: true
         existingClaim: plex
       # Separate PVC for cache to avoid backing up cache files
-      # plex-cache:
-      #   existingClaim: plex-cache
-      #   globalMounts:
-      #     - path: /config/Library/Application Support/Plex Media Server/Cache
+      plex-cache:
+        existingClaim: plex-cache
+        globalMounts:
+          - path: /config/Library/Application Support/Plex Media Server/Cache
       tmp:
         type: emptyDir
       transcode:
