--- a/kubernetes/apps/home/mosquitto/ks.yaml
+++ b/kubernetes/apps/home/mosquitto/ks.yaml
@@ -6,7 +6,7 @@ metadata:
   name: mosquitto
   namespace: flux-system
 spec:
-  targetNamespace: default
+  targetNamespace: home
   path: ./kubernetes/apps/home/mosquitto/app
   prune: true
   sourceRef:
