--- a/kubernetes/apps/home/frigate/app/helmrelease.yaml
+++ b/kubernetes/apps/home/frigate/app/helmrelease.yaml
@@ -27,7 +27,7 @@ spec:
     - name: intel-device-plugin-gpu
       namespace: kube-system
     - name: mosquitto
-      namespace: default
+      namespace: home
     - name: longhorn
       namespace: storage
   values:
