--- a/kubernetes/flux/repositories/helm/kustomization.yaml
+++ b/kubernetes/flux/repositories/helm/kustomization.yaml
@@ -22,4 +22,4 @@ resources:
   - ./repos/xenitab.yaml
   - ./repos/node-feature-discovery.yaml
   - ./repos/plex.yaml
-  - ./skm/plex.yaml
+  - ./repos/sftpgo.yaml
