Add sftp domain

--- a/kubernetes/apps/media/sftpgo/app/helmrelease.yaml
+++ b/kubernetes/apps/media/sftpgo/app/helmrelease.yaml
@@ -55,6 +55,7 @@ spec:
     service:
       annotations:
         io.cilium/lb-ipam-ips: "192.168.108.11"
+        external-dns.alpha.kubernetes.io/hostname: media.${SECRET_DOMAIN}
       type: LoadBalancer
     ui:
       ingress:
