Fix frigate recordings

--- a/kubernetes/apps/home/frigate/app/helmrelease.yaml
+++ b/kubernetes/apps/home/frigate/app/helmrelease.yaml
@@ -145,4 +145,4 @@ spec:
       suv:
         existingClaim: suv-storage
         globalMounts:
-          - path: /storage
+          - path: /media
