--- a/kubernetes/apps/home/frigate/app/resources/config.yml
+++ b/kubernetes/apps/home/frigate/app/resources/config.yml
@@ -403,10 +403,10 @@ go2rtc:
   streams:
     gates_hq:
       - rtsp://admin:12332145@192.168.108.103:8554/Streaming/Channels/101
-      - "ffmpeg:gates_hq#audio=alaw#video=h264#hardware=vaapi"
+      - "ffmpeg:gates_hq#audio=pcma#video=h264#hardware=vaapi"
     gates_lq:
       - rtsp://admin:12332145@192.168.108.103:8554/Streaming/Channels/102
-      - "ffmpeg:gates_lq#audio=alaw#video=h264#hardware=vaapi"
+      - "ffmpeg:gates_lq#audio=pcma#video=h264#hardware=vaapi"
   webrtc:
     candidates:
       - 192.168.108.55:8555
